CocacolaProjectJar/src/objects/Cost_Center__c.object
<CustomObject>
    <fields>
        <fullName>ActiveInactive__c</fullName>
        <label>Active/Inactive</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Name_En__c</fullName>
        <label>Cost Center Name (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Name__c</fullName>
        <label>Cost Center Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_En__c</fullName>
        <label>Function (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cost Center</label>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Cost_Center_Name__c</columns>
        <columns>Function__c</columns>
        <columns>Cost_Center_Name_En__c</columns>
        <columns>Function_En__c</columns>
        <columns>ActiveInactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All - Active</label>
        <language>ja</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Cost_Center_Name__c</columns>
        <columns>Function__c</columns>
        <columns>Cost_Center_Name_En__c</columns>
        <columns>Function_En__c</columns>
        <columns>ActiveInactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All - Inactive</label>
        <language>ja</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCEJ</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Cost_Center_Name__c</columns>
        <columns>Function_En__c</columns>
        <columns>Cost_Center_Name_En__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>C28</value>
        </filters>
        <filters>
            <field>ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>CCEJ</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cost Center No.</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I10000000tF0NEAU_00N10000003Lva4EAC</fullName>
        <active>true</active>
        <field>RFA__c.Cost_Center_Number__c</field>
        <filterItems>
            <field>Cost_Center__c.ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>Enter C28 in the box then click Go!.</infoMessage>
        <isOptional>false</isOptional>
        <name>RFA_Cost Center Number</name>
    </namedFilters>
    <pluralLabel>Cost Centers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>